work on fixing the gap

--- a/assets/layout.scss
+++ b/assets/layout.scss
@@ -7,14 +7,13 @@
     float: left;
 }
 
-$gutter: 24px;
+$gutter: 5px;
 
 $cols: 12;
 
 @for $i from 1 through $cols {
-    $equ: 90% / $i;
+    $equ: 100% / $i;
     .grid.col-#{$i} > div {
-        margin-left: $gutter;
         width: $equ;
     }
 }
@@ -23,10 +22,12 @@ $breakpoint: ('xlg': 1400px, 'lg': 1055px, 'md': 795px, 'sm': 534px);
 
 @each $key, $val in $breakpoint {
     @media all and (max-width: $val) {
+        .grid {
+           width: $val;
+        }
         @for $i from 1 through $cols {
-            $equ: 90% / $i;
+            $equ: 100% / $i;
             .grid.col-#{$key}-#{$i} > div {
-                margin-left: $gutter;
                 width: $equ;
             }
         }
