--- a/assets/style.css
+++ b/assets/style.css
@@ -168,7 +168,6 @@ main {
 	justify-content: center;
 }
 section.grid {
-	padding: 0 5% 0 5%;
 }
 .grid figure {
 	padding-top: 10px;
